eks-opa-policy-templates/templates/ekslimitsensitiveverbs-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: ekslimitsensitiveverbs
  annotations:
    description: "Limits use of bind, impersonate and escalate permissions in RBAC roles (CIS EKS 4.1.8)"
    version: "1.0.0"
spec:
  crd:
    spec:
      names:
        kind: EksLimitSensitiveVerbs
      validation:
        openAPIV3Schema:
          properties:
            excludedRoles:
              type: array
              items:
                type: string
            excludedNamespaces:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package ekslimitsensitiveverbs

        violation[{"msg": msg, "details": {}}] {
          not excluded_role
          not excluded_namespace
          
          verb := input.review.object.rules[_].verbs[_]
          sensitive_verb := ["bind", "impersonate", "escalate"][_]
          verb == sensitive_verb
          
          msg := sprintf("Role '%v' contains sensitive verb '%v' which allows privilege escalation", [input.review.object.metadata.name, verb])
        }

        excluded_role {
          input.review.object.metadata.name == input.parameters.excludedRoles[_]
        }

        excluded_namespace {
          input.review.object.metadata.namespace == input.parameters.excludedNamespaces[_]
        }
