eks-opa-policy-templates/templates/eksminimizewildcard-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: eksminimizewildcard
spec:
  crd:
    spec:
      names:
        kind: K8sMinimizeWildcard
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sminimizewildcard

        violation[{"msg": msg}] {
          rule := input.review.object.rules[_]
          using_wildcard(rule)
          msg := sprintf("Wildcard usage detected in rule %v", [rule])
        }

        using_wildcard(rule) {
          rule.apiGroups[_] == "*"
        }

        using_wildcard(rule) {
          rule.resources[_] == "*"
        }

        using_wildcard(rule) {
          rule.verbs[_] == "*"
        }
