eks-opa-policy-templates/templates/eksmountedsecrets-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: eksmountedsecrets
  annotations:
    description: "Prevents mounting secrets as environment variables"
spec:
  crd:
    spec:
      names:
        kind: EksMountedSecrets
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package eksmountedsecrets

        violation[{"msg": msg, "details": details}] {
          container := input.review.object.spec.containers[_]
          env := container.env[_]
          env.valueFrom.secretKeyRef
          msg := sprintf("Container '%v' mounts secret as environment variable", [container.name])
          details := {
            "container_name": container.name,
            "namespace": input.review.object.metadata.namespace,
            "pod_name": input.review.object.metadata.name,
            "env_name": env.name,
            "cis_benchmark": "4.4.1",
            "finding_type": "CIS_BENCHMARK_VIOLATION"
          }
        }
