eks-opa-policy-templates/templates/eksrestrictdefaultserviceaccount-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: eksrestrictdefaultserviceaccount
  annotations:
    description: "Prevents use of default service account"
spec:
  crd:
    spec:
      names:
        kind: EksRestrictDefaultServiceAccount
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package eksrestrictdefaultserviceaccount

        violation[{"msg": msg, "details": details}] {
          subject := input.review.object.subjects[_]
          subject.kind == "ServiceAccount"
          subject.name == "default"
          msg := sprintf("RoleBinding '%v' cannot use default service account", [input.review.object.metadata.name])
          details := {
            "binding_name": input.review.object.metadata.name,
            "namespace": input.review.object.metadata.namespace,
            "cis_benchmark": "4.1.5",
            "finding_type": "CIS_BENCHMARK_VIOLATION"
          }
        }
